Blatt 9: Aufgabe 4 getippt.

--- a/sheet 9/DST 9.tex
+++ b/sheet 9/DST 9.tex
@@ -125,6 +125,34 @@ This homomorphism is unique because for $h'_2 : X_1 \rightarrow Y_1$ with $g_1 h
 
 
 
+\addtocounter{section}{1}
+
+
+
+
+
+\section{}
+A basis of $KH/J$ is given by the residue classes 
+\[
+ A = (e_1, e_{2'}, e_{2''}, e_3, a_1, a_2, b_1, b_2, c, a_1b_1)
+\]
+and a basis of $KQ/I$ is given by the residue classes
+\[
+ B = (e_1, e_2, e_3, a, b, c, e, eb, ae, aeb).
+\]
+Thus the linear map $\phi : KH/J \rightarrow KQ/I$ given by
+\[
+ \begin{array}{c|cccccccccc}
+  v       & e_1 & e_{2'} & e_{2''} & e_3 & a_1 &  a_2 & b_1 &  b_2 & c & a_1 b_1 \\ \hline
+  \phi(v) & e_1 &      e &   e_2-e & e_3 &  ae & a-ae &  eb & b-eb & c & aeb
+ \end{array}
+\]
+is a vector space isomorphism. By testing out all possible combinations (which will not be included here) we find that for alle $x,y \in A$ we have $\phi(xy) = \phi(x)\phi(y)$. Therefore $\phi$ is an algebra isomorphism.
+
+
+
+
+
 
 
 
