--- a/sheet 9/DST 9.tex
+++ b/sheet 9/DST 9.tex
@@ -59,7 +59,7 @@
 
 
 \section{}
-Assume that $\li{A}{A} \cong \li{A}{A} \oplus \li{A}{A}$ and let $\phi : \li{A}{A} \rightarrow \li{A}{A} \oplus \li{A}{A}$ be an algebra homomorphism. We set
+Assume that $\li{A}{A} \cong \li{A}{A} \oplus \li{A}{A}$ and let $\phi : \li{A}{A} \rightarrow \li{A}{A} \oplus \li{A}{A}$ be an $A$-module isomorphism. We set
 \[
  (b_0, b_1) := \phi(1)
 \]
@@ -95,7 +95,7 @@ so $\psi$ is surjective. For $x \in A$ with $\psi(x) = 0$ we have $(x b_0, x b_1
 \[
  0 = x b_0 a_0 + x b_1 a_1 = x (b_0 a_0 + b_1 a_1) = x \cdot 1 = x.
 \]
-So $\psi$ in injective. This shows that $\psi$ is an $A$-module isomorphism and therefore $\li{A}{A} \cong \li{A}{A} \oplus \li{A}{A}$.
+Therefore $\psi$ in injective. This shows that $\psi$ is an $A$-module isomorphism and therefore $\li{A}{A} \cong \li{A}{A} \oplus \li{A}{A}$.
 
 One trivial example of such an algebra is $A = 0$.
 
