--- a/sheet 10/DST 10.tex
+++ b/sheet 10/DST 10.tex
@@ -63,25 +63,26 @@
 
 
 
+
 \section{}
 
 
 \subsection{}
 Let $x \in V_3$ with $a_3(x) = 0$. Because the diagram commutes we find that
 \[
- 0 = (g_3 a_3)(x) = (a_4 f_3)(x).
+ 0 = g_3 a_3(x) = a_4 f_3(x).
 \]
 Because $a_4$ is a monomorphism this means that $f_3(x) = 0$. From the exactness of the upper row we get that $x \in \ker f_3 = \img f_2$, so there exists $y \in V_2$ with $f_2(y) = x$. Using the commutativity of the diagram we get that
 \[
- 0 = a_3(x) = (a_3 f_2)(y) = (g_2 a_2)(y).
+ 0 = a_3(x) = a_3 f_2(y) = g_2 a_2(y).
 \]
-Therefor $a_2(y) \in \ker g_2 = \img g_1 = \img (g_1 a_1)$, whereby we used that $a_1$ is an epimorphism. So we find some $z \in V_1$ with $(g_1 a_1)(z) = a_2(y)$. Combining all of the above and using the commutativity of the diagram we find that
+Therefor $a_2(y) \in \ker g_2 = \img g_1 = \img (g_1 a_1)$, whereby we used that $a_1$ is an epimorphism. So we find some $z \in V_1$ with $g_1 a_1(z) = a_2(y)$. Combining all of the above and using the commutativity of the diagram we find that
 \[
- a_2( f_1(z) ) = (a_2 f_1)(z) = (g_1 a_1)(z) = a_2(y).
+ a_2( f_1(z) ) = a_2 f_1(z) = g_1 a_1(z) = a_2(y).
 \]
 Because $a_2$ is a monomorphism it follows that $f_1(z) = y$. Because the upper row is exact we get
 \[
- x = f_2(y) = (f_2 f_1)(z) = 0.
+ x = f_2(y) = f_2 f_1(z) = 0.
 \]
 So $a_3$ is a momomorphism.
 
@@ -89,9 +90,9 @@ So $a_3$ is a momomorphism.
 \subsection{}
 Let $x \in W_3$. We look at $g_3(x) \in W_4$. Because $a_4$ is an epimorphism there exists some $y \in V_4$ with $a_4(y) = g_3(x)$. We notice that $f_4(y) = 0$: Using the exactness and commutativity of the diagram we get
 \[
- 0 = (g_4 g_3)(x) = (g_4 a_4)(y) ) = (a_5 f_4)(y),
+ a_5 f_4(y) = g_4 a_4(y) = g_4 g_3(x) = 0,
 \]
-and because $a_5$ is a monomorphism it follows that $f_4(y) = 0$. Because the upper row we have
+and because $a_5$ is a monomorphism it follows that $f_4(y) = 0$. Because the upper row is exact we have
 \[
  y \in \ker f_4 = \img f_3,
 \]
@@ -99,7 +100,7 @@ and therefore there exists some $z \in V_3$ with $f_3(z) = y$.
 
 We now look at $a_3(z)$: From the above and the commutativity of the diagram we get that
 \[
- g_3(x) = a_4(y) = (a_4 f_3)(z) = (g_3 a_3)(z) = g_3( a_3(z) ),
+ g_3(x) = a_4(y) = a_4 f_3(z) = g_3 a_3(z) = g_3( a_3(z) ),
 \]
 so
 \[
@@ -119,22 +120,6 @@ It is enough to assume that $a_1$ is an epimorphism, $a_5$ is a monomorphism and
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \addtocounter{section}{1}
 
 
@@ -144,18 +129,23 @@ It is enough to assume that $a_1$ is an epimorphism, $a_5$ is a monomorphism and
 \section{}
 We define the $K$-vector space
 \[
- K^\N := \{ (\lambda_i)_{i \in \N} : \lambda_n \in K \text{ for all } n \in \N \}
+ K^\N := \{ (\lambda_i)_{i \in \N} : \lambda_i \in K \text{ for all } i \in \N \}
 \]
-and for all $n \in \N$ the $K$-vector space
+and for all $n \in \N$ the subspaces
 \[
- K^\N_n := \{(\lambda_i)_{i \in \N} : \lambda_0 = \ldots = \lambda_{n-1} = 0\}.1
+ K^\N_n := \{(\lambda_i)_{i \in \N} : \lambda_0 = \ldots = \lambda_{n-1} = 0\}.
 \]
-In particular $K^\N_0 = K^\N$.
+and
+\[
+ K_n := \{(\lambda_i)_{i \in \N} : \lambda_i = 0 \text{ for all } i \geq n\}
+\]
+It is clear that for all $n \in \N$ we have $K^\N = K_n \oplus K^\N_n$ and $K_n \cong K^n$.
+
 We now look at the short exact sequence sequence
 \begin{center}
  \begin{tikzpicture}[node distance = 1.5cm]
   \node (0_1)                      {$0$};
-  \node (K)     [right of = 0_1]   {$K$};
+  \node (K)     [right of = 0_1]   {$K_1$};
   \node (K^N)   [right of = K]     {$K^\N$};
   \node (K^N_2) [right of = K^N]   {$K^\N_2$};
   \node (0_2)   [right of = K^N_2] {$0$};
@@ -165,21 +155,11 @@ We now look at the short exact sequence sequence
   \draw[->] (K^N_2) to (0_2);
  \end{tikzpicture}
 \end{center}
-given by the $K$-linear maps
-\begin{gather*}
- f: K \rightarrow K^\N, \lambda \mapsto (\lambda, 0, 0, \ldots)
-\shortintertext{and}
- g: K^\N \rightarrow K^\N_2, (\lambda_0, \lambda_1, \lambda_2, \ldots) \mapsto (0,0,\lambda_1, \lambda_2, \ldots).
-\end{gather*}
-Now we just use the direct sum decomposition $K^\N = K^2 \oplus K^\N_2$, where it is clear that $K \ncong K^2$.
-
-
-
-
-
-
-
-
+where $f$ is the canonical inclusion and
+\[
+ g: K^\N \to K^\N_2, (\lambda_0, \lambda_1, \lambda_2, \ldots) \mapsto (0,0,\lambda_1, \lambda_2, \ldots).
+\]
+Now we just use the direct sum decomposition $K^\N = K_2 \oplus K^\N_2$, where it is clear that $K_1 \ncong K_2$.
 
 
 
